TA-1987 results shift fix (#834)
* TA-1987 add overflow attribute

* TA-1987 set bottom margin, remove hidden overflow attribute

* TA-1987 removal of important flag

* TA-1987 add negative bottom margin to zip code error container

--- a/src/client/components/pages/event-lookup-page/event-lookup-page.scss
+++ b/src/client/components/pages/event-lookup-page/event-lookup-page.scss
@@ -20,10 +20,6 @@
       margin-top: 0;
     }
   }
-
-  @include grid-media($sba-grid-large) {
-    padding-bottom: 195px;
-  }
 }
 
 // Fields
@@ -63,6 +59,11 @@
 
   @include grid-media($sba-grid-large) {
     width: 170px;
+
+    // Balances bottom margin when zip code error is active
+    p {
+      margin-bottom: -20px;
+    }
   }
 
   input {
